--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# Directories
-.vs/
-bin/
+# Binaries
+**/bin/
+!vendor/premake/bin/
+bin-int/
 
-# Files
-*.user
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
