--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -4,10 +4,11 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=731,299
-ViewportId=0xE927CF2F
+ViewportPos=641,114
+ViewportId=0x3DD03744
 Size=637,701
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Custom rendering]
 Pos=60,60
@@ -57,7 +58,19 @@ DockId=0x00000001,0
 Size=1280,720
 Collapsed=0
 
+[Window][Test]
+Pos=86,84
+Size=93,48
+Collapsed=0
+
+[Window][Doom]
+ViewportPos=817,548
+ViewportId=0xA7DFF6E6
+Size=315,701
+Collapsed=0
+
 [Docking][Data]
+DockNode      ID=0x00000002 Pos=641,114 Size=637,701
 DockSpace     ID=0x3BC79352 Pos=449,299 Size=1280,701 Split=X
   DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0xE927CF2F
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701 Split=Y
