buffer and shader + triangle

--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=357,91
+ViewportPos=2224,401
+ViewportId=0xE927CF2F
 Size=490,506
 Collapsed=0
 
