rendering info + pipeline change

--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -4,10 +4,30 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1753,387
+ViewportPos=1253,386
 ViewportId=0xE927CF2F
 Size=465,680
+Collapsed=1
+
+[Window][My First Tool]
+Pos=60,60
+Size=409,124
 Collapsed=0
 
+[Window][Rendering Info]
+Pos=82,76
+Size=335,154
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Resdfo]
+Pos=32,35
+Size=322,59
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=376,393 Size=335,154 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=322,59 Selected=0x79A82C04
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=322,63 Selected=0x4615BCCA
 
