--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -15,8 +15,8 @@ Size=409,124
 Collapsed=0
 
 [Window][Rendering Info]
-Pos=82,76
-Size=335,154
+Pos=883,44
+Size=356,133
 Collapsed=0
 DockId=0x00000003,0
 
@@ -26,8 +26,13 @@ Size=322,59
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Rendering Stats]
+Pos=972,190
+Size=246,83
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=376,393 Size=335,154 Split=Y
+DockNode    ID=0x00000001 Pos=917,101 Size=356,133 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=322,59 Selected=0x79A82C04
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=322,63 Selected=0x4615BCCA
 
