perspective camera and depth buffer

--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -15,7 +15,7 @@ Size=409,124
 Collapsed=0
 
 [Window][Rendering Info]
-Pos=883,44
+Pos=831,125
 Size=356,133
 Collapsed=0
 DockId=0x00000003,0
@@ -27,12 +27,22 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Rendering Stats]
-Pos=972,190
+Pos=161,165
 Size=246,83
 Collapsed=0
 
+[Window][Debug]
+Pos=70,570
+Size=636,136
+Collapsed=0
+
+[Window][Camera Settings]
+Pos=574,543
+Size=643,176
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=917,101 Size=356,133 Split=Y
+DockNode    ID=0x00000001 Pos=865,182 Size=356,133 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=322,59 Selected=0x79A82C04
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=322,63 Selected=0x4615BCCA
 
