rendering stats overlay

--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1253,386
-ViewportId=0xE927CF2F
+Pos=1067,65
 Size=465,680
-Collapsed=1
+Collapsed=0
 
 [Window][My First Tool]
 Pos=60,60
@@ -25,7 +24,7 @@ Size=322,59
 Collapsed=0
 
 [Window][Rendering Stats]
-Pos=825,48
+Pos=661,118
 Size=246,83
 Collapsed=0
 
@@ -37,6 +36,64 @@ Collapsed=0
 [Window][Camera Settings]
 Pos=147,30
 Size=297,203
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=864,305
+Size=500,440
+Collapsed=0
+
+[Window][Example: Console]
+Pos=-284,-199
+Size=520,600
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=-284,-199
+Size=430,450
+Collapsed=0
+
+[Window][Same title as another window##1]
+ViewportPos=100,100
+ViewportId=0x78C07CE7
+Size=450,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+ViewportPos=100,200
+ViewportId=0xE1C92D5D
+Size=450,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+ViewportPos=100,300
+ViewportId=0x5135D98A
+Size=247,48
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=-284,-199
+Size=420,391
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=-284,-199
+Size=607,944
+Collapsed=0
+
+[Window][Example: Simple overlay]
+Pos=158,91
+Size=379,174
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,256
+Collapsed=0
+
+[Window][Exaffmple: Simple overlay]
+Pos=333,256
+Size=240,95
 Collapsed=0
 
 [Docking][Data]
