--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -1,11 +1,13 @@
 [Window][Debug##Default]
-Pos=8,8
-Size=400,400
+ViewportPos=2118,251
+ViewportId=0x9F5F46A1
+Size=1147,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1067,65
-Size=465,680
+ViewportPos=2303,587
+ViewportId=0xE927CF2F
+Size=465,638
 Collapsed=0
 
 [Window][My First Tool]
@@ -29,8 +31,9 @@ Size=246,83
 Collapsed=0
 
 [Window][Debug]
-Pos=70,570
-Size=144,85
+ViewportPos=262,262
+ViewportId=0xAD6468A3
+Size=216,183
 Collapsed=0
 
 [Window][Camera Settings]
@@ -72,7 +75,7 @@ Size=247,48
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=-284,-199
+Pos=346,185
 Size=420,391
 Collapsed=0
 
@@ -87,13 +90,18 @@ Size=379,174
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=60,60
-Size=338,256
-Collapsed=0
+Pos=219,123
+Size=1499,933
+Collapsed=1
 
 [Window][Exaffmple: Simple overlay]
 Pos=333,256
 Size=240,95
+Collapsed=0
+
+[Window][FPS Graph]
+Pos=956,289
+Size=383,152
 Collapsed=0
 
 [Docking][Data]
