--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -31,9 +31,8 @@ Size=246,83
 Collapsed=0
 
 [Window][Debug]
-ViewportPos=262,262
-ViewportId=0xAD6468A3
-Size=216,183
+Pos=1665,222
+Size=137,70
 Collapsed=0
 
 [Window][Camera Settings]
