--- a/Games/Sandbox/imgui.ini
+++ b/Games/Sandbox/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-ViewportPos=2170,303
+ViewportPos=2334,467
 ViewportId=0x9F5F46A1
 Size=1147,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2303,587
+ViewportPos=3749,250
 ViewportId=0xE927CF2F
 Size=465,638
 Collapsed=0
@@ -31,7 +31,7 @@ Size=246,83
 Collapsed=0
 
 [Window][Debug]
-Pos=1638,205
+Pos=1638,204
 Size=213,114
 Collapsed=0
 
@@ -46,7 +46,8 @@ Size=500,440
 Collapsed=0
 
 [Window][Example: Console]
-Pos=-284,-199
+ViewportPos=2391,473
+ViewportId=0x46B5E99C
 Size=520,600
 Collapsed=0
 
