--- a/Games/Raycaster/imgui.ini
+++ b/Games/Raycaster/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1118,385
-ViewportId=0xE927CF2F
+Pos=1298,474
 Size=490,506
 Collapsed=0
 
@@ -25,11 +24,9 @@ Size=353,714
 Collapsed=0
 
 [Window][Example: Console]
-ViewportPos=534,347
-ViewportId=0xD4B39271
-Size=520,300
+Pos=179,702
+Size=1127,300
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -51,7 +48,7 @@ Collapsed=0
 Pos=309,364
 Size=550,243
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Size=1280,720
@@ -69,9 +66,7 @@ Size=315,701
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=449,299 Size=1280,701 Split=X
-  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0xE927CF2F
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=520,300 Selected=0x46B5E99C
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=520,298
+DockSpace   ID=0x3BC79352 Pos=449,299 Size=1280,701 Split=X
+  DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0xE927CF2F
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
 
