--- a/SeleneEditor/imgui.ini
+++ b/SeleneEditor/imgui.ini
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace Demo]
-Size=1280,720
+Size=1920,1080
 Collapsed=0
 
 [Window][Test]
@@ -65,8 +65,55 @@ ViewportId=0xA7DFF6E6
 Size=315,701
 Collapsed=0
 
+[Window][Rendering Info]
+Pos=1593,10
+Size=317,205
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=0,19
+Size=325,1061
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace]
+Size=1920,1080
+Collapsed=0
+
+[Window][Selene Editor DockSpace]
+Pos=0,0
+Size=1920,1080
+Collapsed=0
+
+[Window][Console]
+Pos=355,794
+Size=1250,286
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=353,1061
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Details]
+Pos=1607,19
+Size=313,1061
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=449,299 Size=1280,701 Split=X
-  DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0xE927CF2F
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
+DockSpace         ID=0x3BC79352 Pos=190,232 Size=1920,1061 Split=X
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0x788BAA0D
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
+DockSpace         ID=0xC7882AA7 Window=0x8055B092 Pos=412,118 Size=1920,1061 Split=X
+  DockNode        ID=0x00000001 Parent=0xC7882AA7 SizeRef=1605,1061 Split=X
+    DockNode      ID=0x00000009 Parent=0x00000001 SizeRef=353,1061 Selected=0x9A68760C
+    DockNode      ID=0x0000000A Parent=0x00000001 SizeRef=1250,1061 Split=Y
+      DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1920,773 Split=X
+        DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=325,1061 Selected=0x788BAA0D
+        DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1593,1061 CentralNode=1 Selected=0xF9BEF62A
+      DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=1920,286 Selected=0xF9BEF62A
+  DockNode        ID=0x00000005 Parent=0xC7882AA7 SizeRef=313,1061 Selected=0xBD9B3216
 
