base dockspace with icon

--- a/SeleneEditor/imgui.ini
+++ b/SeleneEditor/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=659,214
-Size=490,506
+ViewportPos=2183,373
+ViewportId=0xE927CF2F
+Size=959,501
 Collapsed=0
 
 [Window][Example: Custom rendering]
@@ -24,7 +25,7 @@ Size=353,714
 Collapsed=0
 
 [Window][Example: Console]
-Pos=179,702
+Pos=276,205
 Size=1127,300
 Collapsed=0
 
@@ -34,8 +35,7 @@ Size=500,440
 Collapsed=0
 
 [Window][Example: Documents]
-ViewportPos=1683,363
-ViewportId=0x1FD64BEB
+Pos=1442,98
 Size=272,491
 Collapsed=0
 
@@ -86,34 +86,91 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Console]
-Pos=355,794
-Size=1250,286
+Pos=0,786
+Size=1616,294
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000008,0
 
 [Window][Scene Hierarchy]
-Pos=0,19
-Size=353,1061
+Pos=1618,23
+Size=302,526
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000A,0
 
 [Window][Details]
-Pos=1607,19
-Size=313,1061
+Pos=1618,181
+Size=302,899
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000E,0
+
+[Window][ Scene Hierarchy]
+Pos=1618,23
+Size=302,525
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Scene Hierarchy]
+Pos=60,60
+Size=458,357
+Collapsed=0
+
+[Window][ Scene Hierarchy]
+ViewportPos=1824,737
+ViewportId=0x2DB74AEC
+Size=409,399
+Collapsed=0
+
+[Window][ Scene Hierarchy]
+Pos=1622,23
+Size=298,446
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][ Details]
+Pos=1618,557
+Size=302,523
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][ Details]
+Pos=1622,471
+Size=298,609
+Collapsed=0
+DockId=0x00000012,0
+
+[Window][ Console]
+Pos=0,715
+Size=1620,365
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][ Viewport]
+Pos=0,23
+Size=1620,690
+Collapsed=0
+DockId=0x00000013,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Pos=190,232 Size=1920,1061 Split=X
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0x788BAA0D
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
-DockSpace         ID=0xC7882AA7 Window=0x8055B092 Pos=412,118 Size=1920,1061 Split=X
-  DockNode        ID=0x00000001 Parent=0xC7882AA7 SizeRef=1605,1061 Split=X
-    DockNode      ID=0x00000009 Parent=0x00000001 SizeRef=353,1061 Selected=0x9A68760C
-    DockNode      ID=0x0000000A Parent=0x00000001 SizeRef=1250,1061 Split=Y
-      DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1920,773 Split=X
-        DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=325,1061 Selected=0x788BAA0D
-        DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1593,1061 CentralNode=1 Selected=0xF9BEF62A
-      DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=1920,286 Selected=0xF9BEF62A
-  DockNode        ID=0x00000005 Parent=0xC7882AA7 SizeRef=313,1061 Selected=0xBD9B3216
+DockSpace             ID=0x3BC79352 Pos=242,288 Size=1920,1057 Split=X
+  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0x788BAA0D
+  DockNode            ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
+DockSpace             ID=0xC7882AA7 Window=0x8055B092 Pos=1082,284 Size=1920,1057 Split=X
+  DockNode            ID=0x00000001 Parent=0xC7882AA7 SizeRef=1620,1061 Split=X
+    DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=325,1061 Selected=0x788BAA0D
+    DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=1593,1061 Split=Y Selected=0xF9BEF62A
+      DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1668,1069 Split=Y
+        DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=2142,1011 CentralNode=1 Selected=0xC12F3EC7
+        DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=2142,365 Selected=0x49A48618
+      DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1668,294 Selected=0xF9BEF62A
+  DockNode            ID=0x00000005 Parent=0xC7882AA7 SizeRef=298,1061 Split=Y Selected=0xBD9B3216
+    DockNode          ID=0x0000000A Parent=0x00000005 SizeRef=417,679 Selected=0x9A68760C
+    DockNode          ID=0x0000000B Parent=0x00000005 SizeRef=417,684 Split=Y Selected=0xBD9B3216
+      DockNode        ID=0x0000000C Parent=0x0000000B SizeRef=302,525 Selected=0x34A10989
+      DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=302,530 Split=Y Selected=0xBD9B3216
+        DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=302,156 Split=Y Selected=0xAD59678D
+          DockNode    ID=0x0000000F Parent=0x00000009 SizeRef=302,532 Split=Y Selected=0xAD59678D
+            DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=302,446 Selected=0xAD59678D
+            DockNode  ID=0x00000012 Parent=0x0000000F SizeRef=302,609 Selected=0xF1D0D534
+          DockNode    ID=0x00000010 Parent=0x00000009 SizeRef=302,523 Selected=0xA86D487B
+        DockNode      ID=0x0000000E Parent=0x0000000D SizeRef=302,899 Selected=0xBD9B3216
 
