--- a/SeleneEditor/imgui.ini
+++ b/SeleneEditor/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2183,373
+ViewportPos=2433,218
 ViewportId=0xE927CF2F
 Size=959,501
 Collapsed=0
@@ -150,11 +150,23 @@ Size=1620,690
 Collapsed=0
 DockId=0x00000013,0
 
+[Window][Stacked 1]
+ViewportPos=2183,373
+ViewportId=0xE927CF2F
+Pos=275,148
+Size=409,204
+Collapsed=0
+
+[Window][Delete?]
+Pos=826,469
+Size=268,142
+Collapsed=0
+
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Pos=242,288 Size=1920,1057 Split=X
   DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0x788BAA0D
   DockNode            ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
-DockSpace             ID=0xC7882AA7 Window=0x8055B092 Pos=1082,284 Size=1920,1057 Split=X
+DockSpace             ID=0xC7882AA7 Window=0x8055B092 Pos=294,340 Size=1920,1057 Split=X
   DockNode            ID=0x00000001 Parent=0xC7882AA7 SizeRef=1620,1061 Split=X
     DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=325,1061 Selected=0x788BAA0D
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=1593,1061 Split=Y Selected=0xF9BEF62A
