--- a/SeleneEditor/imgui.ini
+++ b/SeleneEditor/imgui.ini
@@ -45,10 +45,9 @@ Size=450,267
 Collapsed=0
 
 [Window][Example: Log]
-Pos=309,364
+Pos=822,440
 Size=550,243
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Size=1920,1080
@@ -146,9 +145,9 @@ DockId=0x00000015,0
 
 [Window][ Viewport]
 Pos=0,23
-Size=1620,690
+Size=1620,831
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000014,0
 
 [Window][Stacked 1]
 ViewportPos=2183,373
@@ -162,16 +161,29 @@ Pos=826,469
 Size=268,142
 Collapsed=0
 
+[Window][ Log]
+Pos=0,1107
+Size=1066,264
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][ Logs]
+Pos=0,856
+Size=1620,224
+Collapsed=0
+DockId=0x00000016,0
+
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Pos=242,288 Size=1920,1057 Split=X
-  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=1008,701 CentralNode=1 Selected=0x788BAA0D
-  DockNode            ID=0x00000004 Parent=0x3BC79352 SizeRef=270,701
 DockSpace             ID=0xC7882AA7 Window=0x8055B092 Pos=294,340 Size=1920,1057 Split=X
   DockNode            ID=0x00000001 Parent=0xC7882AA7 SizeRef=1620,1061 Split=X
     DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=325,1061 Selected=0x788BAA0D
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=1593,1061 Split=Y Selected=0xF9BEF62A
       DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1668,1069 Split=Y
-        DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=2142,1011 CentralNode=1 Selected=0xC12F3EC7
+        DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=2142,1011 Split=Y Selected=0xC12F3EC7
+          DockNode    ID=0x00000004 Parent=0x00000013 SizeRef=1620,791 Split=Y Selected=0xC12F3EC7
+            DockNode  ID=0x00000014 Parent=0x00000004 SizeRef=1620,831 CentralNode=1 Selected=0xC12F3EC7
+            DockNode  ID=0x00000016 Parent=0x00000004 SizeRef=1620,224 Selected=0xEAAFAED1
+          DockNode    ID=0x00000006 Parent=0x00000013 SizeRef=1620,264 Selected=0x758398D1
         DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=2142,365 Selected=0x49A48618
       DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1668,294 Selected=0xF9BEF62A
   DockNode            ID=0x00000005 Parent=0xC7882AA7 SizeRef=298,1061 Split=Y Selected=0xBD9B3216
