imgui working with dx11 backend

--- a/SeleneEditor/imgui.ini
+++ b/SeleneEditor/imgui.ini
@@ -1,200 +1,49 @@
-[Window][Debug##Default]
-Pos=60,48
-Size=400,400
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-ViewportPos=2433,218
-ViewportId=0xE927CF2F
-Size=959,501
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=60,60
-Size=420,391
-Collapsed=0
-
-[Window][Dear ImGui Metrics]
-Pos=56,97
-Size=338,239
-Collapsed=0
-
-[Window][Dear ImGui Style Editor]
-Pos=60,60
-Size=353,714
-Collapsed=0
-
-[Window][Example: Console]
-Pos=276,205
-Size=1127,300
-Collapsed=0
-
-[Window][Example: Simple layout]
-Pos=60,60
-Size=500,440
-Collapsed=0
-
-[Window][Example: Documents]
-Pos=1442,98
-Size=272,491
-Collapsed=0
-
-[Window][Example: Auto-resizing window]
-Pos=60,60
-Size=450,267
-Collapsed=0
-
-[Window][Example: Log]
-Pos=822,440
-Size=550,243
-Collapsed=0
-
-[Window][DockSpace Demo]
-Size=1920,1080
-Collapsed=0
-
-[Window][Test]
-Pos=86,84
-Size=93,48
-Collapsed=0
-
-[Window][Doom]
-ViewportPos=1566,347
-ViewportId=0xA7DFF6E6
-Size=315,701
-Collapsed=0
-
-[Window][Rendering Info]
-Pos=1593,10
-Size=317,205
-Collapsed=0
-
-[Window][Hierarchy]
-Pos=0,19
-Size=325,1061
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][DockSpace]
-Size=1920,1080
-Collapsed=0
-
 [Window][Selene Editor DockSpace]
 Pos=0,0
 Size=1920,1080
 Collapsed=0
 
-[Window][Console]
-Pos=0,786
-Size=1616,294
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Scene Hierarchy]
-Pos=1618,23
-Size=302,526
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][Details]
-Pos=1618,181
-Size=302,899
-Collapsed=0
-DockId=0x0000000E,0
-
-[Window][ Scene Hierarchy]
-Pos=1618,23
-Size=302,525
-Collapsed=0
-DockId=0x0000000C,0
-
-[Window][Scene Hierarchy]
+[Window][Debug##Default]
 Pos=60,60
-Size=458,357
+Size=400,400
 Collapsed=0
-
-[Window][ Scene Hierarchy]
-ViewportPos=1824,737
-ViewportId=0x2DB74AEC
-Size=409,399
-Collapsed=0
-
-[Window][ Scene Hierarchy]
-Pos=1622,23
-Size=298,446
-Collapsed=0
-DockId=0x00000011,0
-
-[Window][ Details]
-Pos=1618,557
-Size=302,523
-Collapsed=0
-DockId=0x00000010,0
-
-[Window][ Details]
-Pos=1622,471
-Size=298,609
-Collapsed=0
-DockId=0x00000012,0
-
-[Window][ Console]
-Pos=0,715
-Size=1620,365
-Collapsed=0
-DockId=0x00000015,0
 
 [Window][ Viewport]
 Pos=0,23
-Size=1620,831
+Size=1566,718
 Collapsed=0
-DockId=0x00000014,0
+DockId=0x00000001,0
 
-[Window][Stacked 1]
-ViewportPos=2183,373
-ViewportId=0xE927CF2F
-Pos=275,148
-Size=409,204
+[Window][ Scene Hierarchy]
+Pos=1568,23
+Size=352,359
 Collapsed=0
+DockId=0x00000003,0
 
-[Window][Delete?]
-Pos=826,469
-Size=268,142
+[Window][ Details]
+Pos=1568,384
+Size=352,357
 Collapsed=0
+DockId=0x00000005,0
 
-[Window][ Log]
-Pos=0,1107
-Size=1066,264
+[Window][ Logs]
+Pos=0,743
+Size=1920,337
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][ Logs]
-Pos=0,856
-Size=1620,224
+[Window][Dear ImGui Demo]
+ViewportPos=2502,77
+ViewportId=0xE927CF2F
+Size=550,680
 Collapsed=0
-DockId=0x00000016,0
 
 [Docking][Data]
-DockSpace             ID=0xC7882AA7 Window=0x8055B092 Pos=216,262 Size=1920,1057 Split=X
-  DockNode            ID=0x00000001 Parent=0xC7882AA7 SizeRef=1620,1061 Split=X
-    DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=325,1061 Selected=0x788BAA0D
-    DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=1593,1061 Split=Y Selected=0xF9BEF62A
-      DockNode        ID=0x00000007 Parent=0x00000003 SizeRef=1668,1069 Split=Y
-        DockNode      ID=0x00000013 Parent=0x00000007 SizeRef=2142,1011 Split=Y Selected=0xC12F3EC7
-          DockNode    ID=0x00000004 Parent=0x00000013 SizeRef=1620,791 Split=Y Selected=0xC12F3EC7
-            DockNode  ID=0x00000014 Parent=0x00000004 SizeRef=1620,831 CentralNode=1 Selected=0xC12F3EC7
-            DockNode  ID=0x00000016 Parent=0x00000004 SizeRef=1620,224 Selected=0xEAAFAED1
-          DockNode    ID=0x00000006 Parent=0x00000013 SizeRef=1620,264 Selected=0x758398D1
-        DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=2142,365 Selected=0x49A48618
-      DockNode        ID=0x00000008 Parent=0x00000003 SizeRef=1668,294 Selected=0xF9BEF62A
-  DockNode            ID=0x00000005 Parent=0xC7882AA7 SizeRef=298,1061 Split=Y Selected=0xBD9B3216
-    DockNode          ID=0x0000000A Parent=0x00000005 SizeRef=417,679 Selected=0x9A68760C
-    DockNode          ID=0x0000000B Parent=0x00000005 SizeRef=417,684 Split=Y Selected=0xBD9B3216
-      DockNode        ID=0x0000000C Parent=0x0000000B SizeRef=302,525 Selected=0x34A10989
-      DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=302,530 Split=Y Selected=0xBD9B3216
-        DockNode      ID=0x00000009 Parent=0x0000000D SizeRef=302,156 Split=Y Selected=0xAD59678D
-          DockNode    ID=0x0000000F Parent=0x00000009 SizeRef=302,532 Split=Y Selected=0xAD59678D
-            DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=302,446 Selected=0xAD59678D
-            DockNode  ID=0x00000012 Parent=0x0000000F SizeRef=302,609 Selected=0xF1D0D534
-          DockNode    ID=0x00000010 Parent=0x00000009 SizeRef=302,523 Selected=0xA86D487B
-        DockNode      ID=0x0000000E Parent=0x0000000D SizeRef=302,899 Selected=0xBD9B3216
+DockSpace       ID=0xC7882AA7 Window=0x8055B092 Pos=138,184 Size=1920,1057 Split=Y
+  DockNode      ID=0x00000004 Parent=0xC7882AA7 SizeRef=1920,718 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1566,1057 CentralNode=1 Selected=0xC12F3EC7
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=352,1057 Split=Y Selected=0xAD59678D
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=213,529 Selected=0xAD59678D
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=213,526 Selected=0xF1D0D534
+  DockNode      ID=0x00000006 Parent=0xC7882AA7 SizeRef=1920,337 Selected=0xEAAFAED1
 
