--- a/SeleneGame/imgui.ini
+++ b/SeleneGame/imgui.ini
@@ -18,9 +18,9 @@ Size=963,313
 Collapsed=0
 
 [Window][ Details]
-Pos=654,246
+Pos=31,682
 Size=597,334
-Collapsed=1
+Collapsed=0
 
 [Window][ Logs]
 ViewportPos=62,926
@@ -29,13 +29,18 @@ Size=1920,231
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2458,169
+ViewportPos=2457,171
 ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
 [Window][Selene Debug]
 Pos=0,0
-Size=1920,1080
+Size=3440,1369
+Collapsed=0
+
+[Window][ Inspector]
+Pos=22,641
+Size=498,435
 Collapsed=0
 
